# FluidAudio

./: .gitignore  .sortformer_progress.json  .swift-format  160ms_wer_investigation.md  AGENTS.md  ARRAY_OPERATIONS_INTEGRATION.md  ASR_IMPROVEMENT_REPORT.md  ASR_OPTIMIZATION_SUMMARY.md  BENCHMARK_COMPARISON.md  BENCHMARK_RESULTS.md  CLAUDE.md  CONTRIBUTING.md  DIARIZATION_COREML_OPPORTUNITIES.md  DIARIZATION_OPTIMIZATION_JOURNAL.md  DIARIZER_RD_ROADMAP.md  DIART_COMPLETE_ANALYSIS.md  FluidAudio.podspec  GEMINI.md  INT8_QUANTIZATION_ANALYSIS.md  JER_ANALYSIS.md  MODEL_OPTIMIZATION_GUIDE.md  OpenBenchBenchmark.md  Package.resolved  Package.swift  README.md  REVIEW.md  SEGMENTATION_OPTIMIZATION_SUMMARY.md  SPEAKER_DIARIZATION_ANALYSIS.md  TranscriptManager_Progress.md  VoiceProcessingTestREADME.md  add_postprocessing_to_models.py  benchmark_100_files.py  benchmark_kokoro_mlx.py  benchmark_nemo_example.py  benchmark_nemo_pure.py  benchmarks.md  check_model_dims.py  compare_encoder_outputs.py  confusion_pairs.tsv  create_embedding_preprocessor.py  (+26 more)
.claude/: settings.json  settings.local.json
.claude/agents/: nemo-parakeet-expert.md
.github/: pull_request_template.md
.github/workflows/: asr-benchmark.yml  benchmark.yml  claude-code-review.yml  claude.yml  ctc-zh-cn-benchmark.yml  diarizer-benchmark.yml  framework-app-store-validation.yml  gemini-pr-review.yml  japanese-asr-benchmark.yml  kitten-tts-test.yml  kokoro-tts-test.yml  podspec-lint.yml  (+13 more)
Documentation/: ANE_Candidates.md  ANE_Profiler.md  API.md  Architecture.md  Benchmarks.md  CLI.md  CtcDecoderExample.md  CtcModelCompatibility.md  CtcVocabularyBoosting.md  CustomPronunciationDictionary.md  EspeakFramework.md  ForcedAligner.md  Kokoro-TTS-ANE-Optimization.md  KokoroChunkerOverview.md  ModelConversion.md  Models.md  PARAKEET_V3_JOINT_NETWORK_FIX.md  Qwen3-ASR-ANE-Optimization.md  Qwen3-ASR.md  README.md  Sortformer.md  SpeakerDiarization.md  SpeakerManager.md  StreamingASR.md  VADBestPractices.md  VoiceProcessingCompatibility.md  reports.md
Documentation/TTS/qualityReport/: VERIFY.md  pyproject.toml  setup_inference_assets.py  verify_all.py
Documentation/TTS/qualityReport/perf_out/batch_technical_obstacles/: metrics_core_set_plus.csv  metrics_table.md  report.md
Examples/: ArraySliceExample.swift  BundledASRExample.swift  BundledCombinedExample.swift  BundledDiarizationExample.swift  README.md  RealtimeAsrExample.swift  StreamingAsrExample.swift
Scripts/: diarizer_subset_benchmark.sh  fetch_fleurs_from_google.py  fetch_minimax_tts_corpus.py  materialize_earnings22_longform.py  parakeet_subset_benchmark.sh  run_cohere_per_lang.sh  run_diarizer_benchmarks.sh  run_diarizer_subset.sh  run_kokoro_swift_eval.py  run_parakeet_benchmarks.sh  run_parakeet_subset.sh
benchmark_results/: benchmark_summary.md
buckeye/: pyproject.toml  run_pytorch_benchmark.py
buckeye/buckeye-benchmark/: README.md
custom_vocab_parakeet_v3/: boost.tsv  custom_vocab.json  custom_vocab_kokoro_ctc.json  custom_vocab_min_ctc_ids.json  custom_words.txt
docs/: PARAKEET_EOU_STREAMING_IMPLEMENTATION.md  PARAKEET_STREAMING_160MS_ROOT_CAUSE.md  README.md  RealtimeASR-Improvements.md  STREAMING_EOU_CACHE_FIX.md  configuration.mdx  docs.json  installation.mdx  introduction.mdx  quickstart.mdx  qwen3-tts-coreml-issues.md
kokoroConverter/: v21.py  v24.py
scripts/: generate_optimization_models.py  optimization_models_spec.md  profile-asr-benchmark.sh  pyproject.toml  requirements.txt
test-earnings/: README.md  download_parquet.py  extract_parquet.py  normalizer.py  test-run.results  test_keyword.py
tts_context_boosting_kokoro/: reference.txt
wav_compare/: PROGRESS.md
(+1072 files in other folders)
