[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tts-quality-tools"
version = "0.1.0"
description = "Audio quality comparison tools for TTS models (Kokoro-82M variants)"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "numpy>=1.24.0,<2.0",
    "scipy>=1.11.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "pandas>=2.2.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    # Speaker embedding (ECAPA-TDNN)
    "speechbrain>=0.5.16",
    "torch==2.3.1",
    # Audio embedding (CLAP)
    "msclap>=1.3.4",
    "laion-clap>=1.1.4",
    # ONNX runtime for ONNX candidate generation (>=1.20.1 for opset 20 support)
    # Using official onnxruntime package (includes ARM64 support as of 1.17.0)
    "onnxruntime>=1.20.1",
    "onnx>=1.16.0",
    "onnxscript>=0.1.0",
    # CoreML runtime
    "coremltools==8.3.0",
    # Kokoro pipeline deps
    "misaki>=0.3.2",
    "num2words>=0.5.12",
    "spacy>=3.7.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "phonemizer>=3.3.0",
    "espeakng-loader>=0.1.4",
    "huggingface_hub>=0.23.0",
    "loguru>=0.7.2",
    # Note: TTSDS runs in an external venv due to torch pin conflicts
]

[tool.uv]
package = false
dev-dependencies = []
